--- a/package.json
+++ b/package.json
@@ -5,18 +5,29 @@
   "main": "index.js",
   "scripts": {
     "dev": "webpack --watch",
+    "dev-server": "ts-node src/server/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Andrej Sykora",
   "license": "PRIVATE",
-  "dependencies": {},
+  "dependencies": {
+    "@google-cloud/text-to-speech": "^0.5.1",
+    "axios": "^0.18.0",
+    "body-parser": "^1.19.0",
+    "cheerio": "^1.0.0-rc.3",
+    "cors": "^2.8.5",
+    "express": "^4.16.4"
+  },
   "devDependencies": {
-    "webpack": "^4.29.6",
+    "@types/axios": "^0.14.0",
+    "@types/express": "^4.16.1",
     "@types/pixi.js": "^4.8.6",
     "copy-webpack-plugin": "^5.0.2",
     "html-webpack-plugin": "^4.0.0-beta.5",
     "ts-loader": "^5.3.3",
-    "typescript": "^3.3.4000",
+    "ts-node": "^8.1.0",
+    "typescript": "^3.4.5",
+    "webpack": "^4.29.6",
     "webpack-cli": "^3.3.0"
   }
 }
