--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "webpack --watch",
     "dev-server": "ts-node src/server/index.ts",
+    "dist-server": "http-server dist/ -c-1",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Andrej Sykora",
@@ -25,6 +26,7 @@
     "@types/pixi.js": "^4.8.6",
     "copy-webpack-plugin": "^5.0.2",
     "html-webpack-plugin": "^4.0.0-beta.5",
+    "http-server": "^0.11.1",
     "ts-loader": "^5.3.3",
     "ts-node": "^8.1.0",
     "typescript": "^3.4.5",
