--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "webpack --watch",
-    "dev-server": "ts-node src/server/index.ts",
+    "dev-server": "ts-node --skip-project src/server/index.ts",
     "dist-server": "http-server dist/ -c-1",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
