--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,10 +2,11 @@
     "compilerOptions": {
       "moduleResolution": "node",
       "outDir": "./dist/",
-      "noImplicitAny": true,
+      "noImplicitAny": false,
       "module": "es6",
       "target": "es5",
       "allowJs": true,
-      "allowSyntheticDefaultImports": true
+      "allowSyntheticDefaultImports": true,
+      "strict": false
     }
   }
