--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "cheerio": "^1.0.0-rc.3",
     "cors": "^2.8.5",
     "express": "^4.16.4",
-    "ramda": "^0.26.1"
+    "ramda": "^0.26.1",
+    "weighted-random": "^0.1.0"
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
     "@types/express": "^4.16.1",
     "@types/pixi.js": "^4.8.6",
+    "@types/ramda": "^0.26.8",
     "copy-webpack-plugin": "^5.0.2",
     "html-webpack-plugin": "^4.0.0-beta.5",
     "http-server": "^0.11.1",
