--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "ramda": "^0.26.1",
     "recursive-readdir": "^2.2.2",
     "seedrandom": "^3.0.1",
+    "tracery-grammar": "^2.7.4",
     "weighted-random": "^0.1.0"
   },
   "devDependencies": {
