--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "server": "nodemon --watch 'src/server/**/*.ts' --exec ts-node --skip-project src/server/index.ts",
     "installation": "http-server dist/ -c-1",
     "tagger": "http-server src/tagger -c-1",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "ts-node --skip-project src/narrative/test.ts"
   },
   "author": "Andrej Sykora",
   "license": "PRIVATE",
